@@ -32,6 +32,7 @@ extern void cygwin32_conv_to_posix_path (const char *, char *);
 extern void cygwin32_conv_to_full_posix_path (const char *, char *);
 extern int cygwin32_posix_path_list_p (const char *);
 extern void cygwin32_split_path (const char *, char *, char *);
+extern int cygwin32_attach_handle_to_fd (char *, int, HANDLE, mode_t, DWORD);
 #endif
 
 /* DEPRECATED INTERFACES.  These are restricted to MAX_PATH length.
@@ -168,11 +169,6 @@ enum
   PID_EXITED	       = 0x80000000 /* Free entry. */
 };
 
-#ifdef WINVER
-#ifdef _PATH_PASSWD
-extern HANDLE cygwin_logon_user (const struct passwd *, const char *);
-#endif
-
 /* This lives in the app and is initialized before jumping into the DLL.
    It should only contain stuff which the user's process needs to see, or
    which is needed before the user pointer is initialized, or is needed to
@@ -263,10 +259,13 @@ extern void cygwin_premain1 (int argc, char **argv, struct per_process *);
 extern void cygwin_premain2 (int argc, char **argv, struct per_process *);
 extern void cygwin_premain3 (int argc, char **argv, struct per_process *);
 
+#ifdef WINVER
+#ifdef _PATH_PASSWD
+extern HANDLE cygwin_logon_user (const struct passwd *, const char *);
+#endif
 extern void cygwin_set_impersonation_token (const HANDLE);
 
 /* included if <windows.h> is included */
-extern int cygwin32_attach_handle_to_fd (char *, int, HANDLE, mode_t, DWORD);
 extern int cygwin_attach_handle_to_fd (char *, int, HANDLE, mode_t, DWORD);
 
 #ifdef __CYGWIN__
